k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sees-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sees-ui
  template:
    metadata:
      labels:
        app: sees-ui
    spec:
      containers:
      - name: sees-ui
        image: ghcr.io/budd9442/sees-ui:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        command: ["/bin/sh", "-c"]
        args: ["npx prisma migrate deploy && node server.js"]
