k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sees-ui
spec:
  selector:
    app: sees-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
